# bot

./: .encryption_key  .gitignore  .replit  README.md  app.py  generate_icons.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--Build-Full-Stack-Flask-SQLite-BotForge-Pro-Telegram-Bot-Creator-Web-App-Prompt-Build-a-ful-1762169624523_1762169624525.txt
static/: manifest.json  service-worker.js
static/css/: style.css
static/js/: main.js
templates/: analytics.html  base.html  bot_detail.html  create_bot.html  dashboard.html  edit_template.html  import_template.html  index.html  login.html  marketplace.html  mining_app.html  mining_settings.html  settings.html  ton_wallet.html  webapp.html
templates_library/: ai_chatbot.json  airdrop.json  coin_mining.json  game_creator.json  nft_verification.json  payment.json  referral.json  webapp_creator.json
utils/: ai.py  crypto.py  database.py  telegram_api.py  telegram_auth.py  ton_payment.py
