[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "BotForge Pro - Advanced Telegram Bot Creator Platform"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "requests==2.31.0",
    "cryptography==41.0.7",
    "google-generativeai==0.3.2",
    "openpyxl==3.1.2",
    "reportlab==4.0.7",
]
